...
            android:layout_marginEnd="8dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_light"
            android:text="Remove"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/remove_button"
            android:layout_marginTop="8dp"/>
    </LinearLayout>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Item Description"
        android:id="@+id/description_edit_text"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Item Make"
        android:id="@+id/make_edit_text"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Item Model"
        android:id="@+id/model_edit_text"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Item Serial Number"
        android:id="@+id/serial_number_edit_text"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Item Estimated Value"
        android:id="@+id/estimated_value_edit_text"
        android:inputType="numberDecimal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Item Comment"
        android:id="@+id/comment_edit_text"
        android:inputType="text"
        tools:ignore="HardcodedText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Purchase Date (yyyy/mm/dd)"
        android:id="@+id/purchase_date_edit_text"
        android:inputType="text" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_dark"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="Scan Barcode"
        android:id="@+id/scan_barcode_button"
        android:layout_gravity="bottom|center_horizontal"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Scan Serial Number"
        android:id="@+id/scan_serial_button"
...
